--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,11 @@
 }
 
 body {
-  background-color: #3b3b98;
+  /* background-color: hsl(211deg 44% 24% / 61%); */
   color: #fff;
   font-family: 'Muli', sans-serif;
+  /* background-image: url(img/wallpaper.jpg);*/
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,6 +20,19 @@ body {
   margin: 0;
 }
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
 h2 {
   margin: 2% 0 10%;
   text-align: center;
@@ -25,11 +40,13 @@ h2 {
 
 .container {
   align-items: center;
-  background-color: #23235b;
+  background: linear-gradient(-45deg, #312f2f, #4b4a4a, #333333, #1f1f1f);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
   box-shadow: 0px 2px 10px rgb(255 255 255 / 20%);
-  padding: 5% 8%;
-  width: 60%;
-  max-width: 100%;
+  padding: 2% 8%;
+  /* width: 60%; */
+  /* max-width: 100%; */
   text-align: center;
 }
 
@@ -39,17 +56,19 @@ h2 {
     justify-content: space-between;
     align-items: center;
     position: relative;
-    font-size: 18px;
+    font-size: small;
     letter-spacing: 1px;
     padding: 12px 10px;
     height: 50px;
     width: 100%;
+    overflow-x: visible
 }
 
 .result-box #result {
   word-wrap: break-word;
   max-width: calc(100% - 40px);
   overflow-y: scroll;
+  font-size: small;
   height: 100%;
   align-items: center;
   display: flex;
@@ -82,7 +101,7 @@ h2 {
 
 .btn {
   border: none;
-  background-color: #3b3b98;
+  background-color: #181818;
   color: #fff;
   font-size: medium;
   padding: 5%;
@@ -100,11 +119,10 @@ h2 {
 
 .btn:hover,
 .btnClean:hover {
-  background-color: #00000067;
+  background-color: #99939367;
 }
-
 .length{
-  width: 15%;
+  width: 25%;
   border: none;
   background-color: white;
   padding: 2%;
@@ -121,4 +139,10 @@ h2 {
   justify-content: space-between;
   align-items: center;
   margin: 15px 0;
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 8%;
+  }
 }
