Style: Refactor color body

--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,10 @@ body {
   /* background-color: hsl(211deg 44% 24% / 61%); */
   color: #fff;
   font-family: 'Muli', sans-serif;
-  background: #0f0c29;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #000428;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
   /* background-image: url(img/wallpaper.jpg);*/
   
@@ -24,7 +25,7 @@ body {
   margin: 0;
 }
 
-@keyframes gradient {
+/* @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -34,7 +35,7 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
-}
+} */
 
 
 h2 {
@@ -105,7 +106,7 @@ h2 {
 
 .btn {
   border: none;
-  background-color: #1b1838;
+  background-color: #001735;
   color: #fff;
   font-size: medium;
   padding: 5%;
