--- a/style.css
+++ b/style.css
@@ -5,38 +5,26 @@
 }
 
 body {
-  /* background-color: hsl(211deg 44% 24% / 61%); */
   color: #fff;
   font-family: 'Muli', sans-serif;
   background: #000428;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-  /* background-image: url(img/wallpaper.jpg);*/
-  
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  overflow: hidden;
-  /* padding: 10px; */
+  overflow: visible;
   margin: 0;
 }
 
-/* @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-} */
-
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 0;
+}
 
 h2 {
   margin: 2% 0 10%;
@@ -45,34 +33,30 @@ h2 {
 
 .container {
   align-items: center;
-  /* background: linear-gradient(-45deg, #312f2f, #4b4a4a, #333333, #1f1f1f);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite; */
+	animation: gradient 15s ease infinite; 
   box-shadow: 0px 2px 10px rgb(255 255 255 / 20%);
   padding: 2% 8%;
-  /* width: 60%; */
-  /* max-width: 100%; */
   text-align: center;
 }
 
 .result-box {
   background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    font-size: small;
-    letter-spacing: 1px;
-    padding: 12px 10px;
-    height: 50px;
-    width: 100%;
-    overflow-x: visible
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  font-size: small;
+  letter-spacing: 1px;
+  padding: 12px 10px;
+  height: 50px;
+  width: 100%;
+  /* overflow-x: visible */
 }
 
 .result-box #result {
   word-wrap: break-word;
   max-width: calc(100% - 40px);
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   font-size: small;
   height: 100%;
   align-items: center;
@@ -89,9 +73,6 @@ h2 {
 
 .result-box .btn {
   display: flex;
-  /* position: absolute; */
-  /* top: 5px; */
-  /* right: 5px; */
   width: 15%;
   height: 140%;
   font-size: small;
@@ -146,8 +127,8 @@ h2 {
   margin: 15px 0;
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .container {
     padding: 8%;
   }
-}
+} */
